--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,91 +1,100 @@
 body {
-	font-size: 16px;
-	font-family: 'Oxygen' sans-serif;
-	color: #1a1a1a;
-	background-color: pink;
+    font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #1a1a1a;
+    background-color: #599e4b;
 }
 
 
 /** HEADER **/
 
 #header-nav {
-	background-color: yellow;
-	border-radius: 0;
-	border: 0;
+    background-color: #c98715;
+    border-radius: 0;
+    border: 0;
 }
 
 #header-nav button {
-	margin-top: 22px;
+    margin-top: 22px;
 }
+
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-	background-color: red;
+    background-color: #fce29e;
 }
+
 .navbar-collapse {
-	border-top: 0;
-	color: black;
+    border-top: 0;
 }
+
 .navbar-brand, .navbar-nav li a {
-	line-height: 76px;
-	height: 76px;
-	padding-top: 0;
+    line-height: 76px;
+    height: 76px;
+    padding-top: 0;
 }
+
 .navbar-brand h1 {
-	color: green;
-	font-family: 'Oxygen' sans-serif;
-	font-weight: bolder;
-	font-size: 1.8 em;
-
+    color: #7d1913;
+    font-family: 'Abril Fatface', cursive;
+    font-weight: bolder;
+    font-size: 1.8em;
 }
+
 .navbar-brand a:hover {
-	text-decoration: none;
-	text-shadow: 1px 1px 1px white;
+    text-decoration: none;
+    text-shadow: 1px 1px 1px #fe9797;
 }
+
 #nav-list {
-	background-color: red;
+    background-color: #e4af34;
 }
+
 #nav-list a {
-	/* text-align: center;*/
-	font-weight: bolder;
-	color: red;
-	font-size: 2.9em;
+    /*text-align: center;*/
+    font-weight: bolder;
+    color: #282828;
+    font-size: 1.2em;
 }
+
 #nav-list a:hover {
-	color:white ;
-	background-color: red;
+    color: #202020;
+    background-color: #fce29e;
 }
+
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-	border:1px solid green;
+    border: 1px solid #7d1913;
 }
 
-/** END HEADER **/
+
+/** END HEADER */
 
 
-
-/**HOME PAGE **/
+/** HOME PAGE **/
 
 #main-content {
-	width: 92%;
-	margin-bottom: 30px;
+    width: 92%;
+    margin-bottom: 30px;
 }
 
 #main-content h2 {
-	font-size: 2.9em;
-	font-weight: bold;
-	margin-top: 30px;
-	margin-bottom: 50px;
-}
-#main-content h3 {
-	font-size: 1.6em;
-	font-weight: bold;
-	margin-bottom: 1em;
+    font-size: 2.9em;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
-#chocolate-tile, #icecream-tile, #cake-tile {
-	width: 100%;
-	padding: 20px;
-	background-color: gray;
-	margin-bottom: 60px;
-	box-shadow: 0 0 80px white;
+#main-content h3 {
+    font-size: 1.6em;
+    font-weight: bold;
+    margin-bottom: 1em;
 }
+
+#chicken-tile, #beef-tile, #sushi-tile {
+    width: 100%;
+    padding: 20px;
+    background-color: #99ed7b;
+    margin-bottom: 60px;
+    box-shadow: 0 0 80px #18580b;
+}
+
 
 /** END HOME PAGE **/
